# Minnie

./: AGENTS.md  Aimee_Project_Plan.md  CHECKPOINT.md  Dockerfile  README.md  docker-compose.yml  test_animation_sway.py
deploy/: bootstrap.sh  push-public.sh
docs/: AimeeCloud_Protocol_v1.4.md  AimeeCloud_Protocol_v1.5.md
src/aimee_behaviors/: package.xml  setup.cfg  setup.py
src/aimee_behaviors/aimee_behaviors/: __init__.py  animation_node.py  marker_localization_node.py
src/aimee_behaviors/config/: behaviors.yaml
src/aimee_behaviors/launch/: behaviors.launch.py
src/aimee_bringup/config/robots/: bob.yaml  default.yaml  minnie.yaml  ron.yaml  wren.yaml
src/aimee_bringup/launch/: core.launch.py  robot.launch.py
src/aimee_cloud_bridge/aimee_cloud_bridge/: cloud_bridge_node.py
src/aimee_cloud_bridge/aimee_cloud_bridge/brick/: cloud_bridge.py
src/aimee_cloud_bridge/config/: cloud_bridge.yaml
src/aimee_msgs/: CMakeLists.txt
src/aimee_msgs/msg/: AudioChunk.msg  MapInfo.msg
src/aimee_msgs/srv/: DeleteMap.srv  ExportMap.srv  ImportMap.srv  ListMaps.srv  LoadMap.srv  SaveMap.srv
src/aimee_nav/: CMakeLists.txt
src/aimee_nav/aimee_nav/: __init__.py  aimee_nav_node.py  explore_engine.py  ld19_driver.py  map_manager.py  obstacle_avoidance.py  pid_controller.py  wave_rover_driver.py  yahboom_imu_driver.py
src/aimee_nav/config/: aimee_nav_params_stable_backup_2026-05-09.yaml
src/aimee_nav/cpp/include/aimee_nav_core/: frontier_detector.hpp  mcl_2d.hpp
src/aimee_nav/cpp/src/: bindings.cpp  frontier_detector.cpp  mcl_2d.cpp
src/aimee_nav/scripts/: test_90deg_turn.py  test_imu.py  test_map_manager.py  test_mcl_frontier.py  test_point_base.py  test_straight_line.py  validate_sensors.py
src/aimee_ros2_monitor/aimee_ros2_monitor/: monitor_node.py
src/aimee_ros2_monitor/aimee_ros2_monitor/templates/: map_console.html
src/aimee_tts/aimee_tts/: tts_node.py
src/aimee_ugv02_controller/aimee_ugv02_controller/: ugv02_controller_node.py
src/aimee_voice_manager/aimee_voice_manager/: voice_manager_node.py
systemd/: aimee-robot.service
